Convert reachability data to Multimap. Migrate more things to Java 8.